# BsPatch

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hmfl/careasy/bsdiff/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hmfl/careasy/bsdiff/: MainActivity.java
app/src/main/res/layout/: layout_my_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hmfl/careasy/bsdiff/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mybspatch/: build.gradle
mybspatch/src/main/: AndroidManifest.xml
mybspatch/src/main/cpp/: CMakeLists.txt  bsdiff-lib.cpp
mybspatch/src/main/java/com/hmfl/careasy/mybspatch/: BsPatchUtil.java
mybspatch/src/main/res/values/: strings.xml
